--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
       </form>
     </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="/assets/js/home.js"></script>
 </body>
 
 </html>
