--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="/assets/js/ajax-setup.js"></script>
   <script src="/assets/js/home.js"></script>
 </body>
 
