Modal and add modal css

--- a/public/user-boards.html
+++ b/public/user-boards.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/modal.css" />
   <link rel="stylesheet" type="text/css" href="/assets/css/user-boards.css" />
   <title>Mello</title>
 </head>
@@ -36,6 +37,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/assets/js/ajax-setup.js"></script>
+  <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
   <script src="/assets/js/user-boards.js"></script>
 
 </body>
