--- a/public/board.html
+++ b/public/board.html
@@ -28,6 +28,9 @@
     </header>
     <div class="container">
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/assets/js/ajax-setup.js"></script>
+    <script src="/assets/js/board.js"></script>
 </body>
 
 
