--- a/public/board.html
+++ b/public/board.html
@@ -28,8 +28,32 @@
     </header>
     <div class="container">
     </div>
+
+    <!-- Create List Modal -->
+    <div class="modal micromodal-slide" id="create-list" aria-hidden="true">
+      <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+        <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="create-list-title">
+          <header class="modal__header">
+            <h2 class="modal__title" id="create-list-title">
+              New list title
+            </h2>
+            <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          </header>
+          <form method="POST">
+            <main class="modal__content" id="create-list-content">
+              <input placeholder="New list title" type="text" />
+            </main>
+            <footer class="modal__footer">
+              <button class="modal__btn modal__btn-primary save">Save</button>
+            </footer>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/assets/js/ajax-setup.js"></script>
+    <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
     <script src="/assets/js/board.js"></script>
 </body>
 
