--- a/public/board.html
+++ b/public/board.html
@@ -78,6 +78,33 @@
       </div>
     </div>
 
+    <!-- Edit Card Modal -->
+    <div class="modal micromodal-slide" id="edit-card" aria-hidden="true">
+      <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+        <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="edit-card-title">
+          <header class="modal__header">
+            <h2 class="modal__title" id="edit-card-title">
+              Edit card
+            </h2>
+            <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          </header>
+          <form method="POST">
+            <main class="modal__content" id="edit-card-content">
+              <textarea placeholder="Edit card text" cols="50" rows="8"></textarea>
+            </main>
+            <footer class="modal__footer">
+              <button class="modal__btn modal__btn-primary save">
+                Save Card
+              </button>
+              <button class="modal__btn modal__btn-danger delete">
+                Delete Card
+              </button>
+            </footer>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <!-- Create List Modal -->
     <div class="modal micromodal-slide" id="create-list" aria-hidden="true">
       <div class="modal__overlay" tabindex="-1" data-micromodal-close>
