--- a/public/board.html
+++ b/public/board.html
@@ -129,6 +129,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/assets/js/ajax-setup.js"></script>
+    <script src="https://unpkg.com/sortablejs@1.8.4/Sortable.min.js"></script>
     <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
     <script src="/assets/js/board.js"></script>
 </body>
